packages/truffle/test/sources/migrations/error/contracts/ExampleAssert.sol
pragma solidity ^0.4.4;


contract ExampleAssert {
  constructor() public {
    assert(false);
  }
}
